--- a/EN/style/event.css
+++ b/EN/style/event.css
@@ -10,35 +10,16 @@ html, body{
     padding: 15px 0px !important;
 }
 .navbar-brand{
-    margin-right: 50px !important;
-}
-.eventsContainer, .event, .btnEvent{
-    
-  flex-direction: row-reverse !important;
-
+    margin-left: 50px !important;
 }
 .nav-link {
     color: white;
+    font-family: 'Poppins', sans-serif;
     font-size: 18px;
     margin-left: 35px;
     background: none;
     outline: none;
     border: none;
-}
-
-.btnModal{
-    color: white;
-    font-size: 18px;
-    margin-left: 35px;
-    background: none;
-    outline: none;
-    border: none;
-}
-
-.btnModal:hover, .btnModal:focus, .btnModal:active, .btnModal:visited, .btnModal:link{
-    background: none !important;
-    outline: none !important;
-    border: none !important;
 }
 
 .nav-link:hover, .nav-link:focus, .nav-link:active, .nav-link:visited, .nav-link:link {
@@ -47,96 +28,58 @@ html, body{
     border: none !important;
 }
 
-.tooggleBtnSmall , .logoImgSmall {
-    display: none;
-}
 
 .nav-link:hover{
-    text-decoration: none;
-    color: white;
+    
     transform: scale(1.03);
-}
-.btnModal:hover{
-    transform: scale(1.03);
-    text-decoration: none;
-    color: white;
 }
 .navbar-nav {
     margin-right: 40px;
 }
-
+.nav-link:hover{
+    text-decoration: none;
+    color: white;
+}
 .navbar-toggler{
     color: white !important;
     outline: none !important;
-    margin-left: 20px !important;
+    margin-right: 20px !important;
     font-size: 25px !important;
 }
 
 @media (max-width: 520px){
     .navbar-brand{
-        margin-right: 7px !important;
+        margin-left: 17px !important;
     }
-    .navbar-toggler{
-        margin-left: 7px !important;
+    .nav-link {
+        margin-left: 20px !important;
     }
-    .btnModal{
-        margin-right: 10px !important;
-    }
-    .nav-link{
-        margin-right: 26px !important;
-    }
-   
- 
 }
-
 @media (max-width: 991px){
-    .nav-link, .btnModal {
+    .nav-link {
         margin-top: 5px;
         margin-left: 60px;
     }
     .navbar-nav{
         margin-top: 15px;
     }
-    .elements{
-        flex-direction: row-reverse;
-    }
     .nav-link:hover{
         transform: none !important;
     }
-    .tooggleBtnSmall , .logoImgSmall {
-        display: initial;
-    }
-    .logoImgLarge, .logoImgLarge{
-        display: none;
-    }
-    .navbar-nav{
-       text-align: right !important;
-       justify-content: right !important;
-    }
-    .btnModal:hover{
-        transform: none;
-    }
-    .btnModal{
-        margin-right: 50px;
-    }
-    .nav-link{
-        margin-right: 64px;
-    }
 }
 
-/* Right Content CSS Fix */
+/* Left Content CSS Fix */
 
 
 .reservation, .privateOffice, .events, .subscription{
- 
+    font-family: 'Poppins', sans-serif;
     margin-top: 50px !important;
-    margin-left: 18% !important;
+    margin-left: 30%;
     background-color: white;
     padding: 30px 40px;
     box-shadow: 0 20px 20px rgba(0,0,0,.03);
     width: 180px;
     border-radius: 10px;
-    font-weight: bold;
     
 }
 
@@ -148,7 +91,6 @@ html, body{
 
 #content p {
     color: #707070;
-    font-weight: bold;
 }
 
 .subscription img {
@@ -173,8 +115,6 @@ html, body{
     text-align: center !important;
   
 }
-
-
 
 .events img {
     margin-left: 25px !important;
@@ -205,18 +145,15 @@ html, body{
 
 @media (max-width: 1340px){
     .reservation, .privateOffice, .events, .subscription{
-        margin-right: 12% ;
-        margin-left: 0% !important;
+        margin-left: 12% !important;
     }
 
 }
 
 @media (max-width: 1588px){
     .reservation, .privateOffice, .events, .subscription{
-
+        margin-left: 20%;
         min-width: 165px;
-        margin-right: 12% ;
-        margin-left: 0% !important;
 
     }
 
@@ -225,10 +162,10 @@ html, body{
 @media (max-width: 1198px){
     .reservation, .privateOffice, .events, .subscription{
         padding: 30px 35px;
-        margin-right: 5% !important;
+        margin-left: 5% !important;
     }
     .elements{
-        margin-right: 5% !important;
+        margin-left: 5% !important;
     }
 
 }
@@ -236,11 +173,10 @@ html, body{
 @media (max-width: 1028px){
     .reservation, .privateOffice, .events, .subscription{
         padding: 30px 30px;
-        margin-left: -15px !important;
         width: 155px !important;
     }
     .elements{
-        margin-right: 1% !important;
+        margin-left: 1% !important;
     }
 }
 
@@ -253,8 +189,8 @@ html, body{
     }
     .elements{
        justify-content: center;
-        margin-right: 0% !important;
-        margin-left: 5% !important;
+        margin-left: 0% !important;
+        margin-right: 2% !important;
        
     }
 
@@ -262,7 +198,6 @@ html, body{
 
          font-size: 14px !important;
      }
-
 
 }
 
@@ -272,141 +207,9 @@ html, body{
     }
 }
 
-/* Sign In CSS */
+/* Events : Right Content */
 
-.modal-body h1{
-    font-size: 25px;
-    font-weight: 800;
-    margin-top: 30px;
-  
-}
 
-.modal-body img{
-   
-    margin-top: 20px;
-}
-
-.modal-body form{
-
-    width: 60%;
-    text-align: center;
-    justify-content: center;
-    margin: 40px auto;
-}
-
-.modal-body form input{
-    background-color: #EBEAE9;
-    height: 45px !important;
-    border-radius: 40px;
-    padding-left: 30px;
-    color: #707070 !important;
- }
-
- .modal-body form input:hover{
-    background-color: #EBEAE9 !important;
- }
-
- .form-group {
-     text-align: right !important;
- }
- input[type=password]{
-     margin-bottom: 10px;
-     margin-top: 20px;
- }
- .form-group a{
-   color: #707070;
-   font-weight: 600;
-   text-decoration: none;
-}
-
-.register{
-    color: #707070;
-    font-weight: 600;
-    text-decoration: none;
-   
- }
-
- .modal-content  {
-    -webkit-border-radius: 20px !important;
-    -moz-border-radius: 20px !important;
-    border-radius: 20px !important; 
-}
-
-.fa-times {
-    margin-right: 30px !important;
-    margin-top: 20px !important;
-    font-size: 30px !important;
-    color: #E3B038;
-   
-}
-
-.close {
-    outline: none !important;
-    color: #E3B038;
-}
-
- .register:hover{
-    color: #707070;
-    text-decoration: none;
-   
- }
-
- .nav-item button{
-     box-shadow: none !important;
- }
-
-.signInBtn {
-    background-color: #E3B038;
-    outline: none;
-    padding: 10px 0px;
-    border: none;
-    border-radius: 30px;
-    font-size: 18px;
-  
-    font-weight: 500;
-    margin-top: 20px;
-    margin-bottom: 20px !important;
-    
-}
-.signInBtn:hover {
-    background-color: #E3B038;
-    transform: scale(1.03);
-   
-}
-
-@media(max-width: 991px){
-
-    .modal-body form{
-        width: 80%;
-    }
-
-}
-
-@media(max-width: 400px){
-
-    .modal-body form{
-        width: 95%;
-    }
-
-}
-
-@media(max-width: 350px){
-
-    .fa-times {
-        margin-right: 10px !important;
-        font-size: 25px !important;
-        margin-top: 33px !important;
-       
-    }
-
-}
-
-/* Events : Left Content */
-
-#events{
-    margin-left: 6%;
-    margin-top: 10px;
-}
 .eventDate {
     color: #FC9700;
     font-weight: bold;
@@ -424,14 +227,12 @@ html, body{
     border-radius: 25px;
     margin-top: 20px;
     margin-bottom: 60px;
-    margin-left: 8%;
     
 }
 
 .txtEvent {
     padding-top: 30px;
-    margin-right: 2%;
-    text-align: right !important;   
+    
     
 }
 
@@ -439,9 +240,7 @@ html, body{
     transform: scale(1.03);
 }
 .txtEvent h1{
-    font-size: 21px !important;  
-    text-align: right !important;   
-   
+    font-size: 21px !important;        
 }
 
 @media(max-width: 1440px){
@@ -451,7 +250,7 @@ html, body{
 }
 
 .txtEvent h1{
-    
+    font-family: 'Poppins', sans-serif;
     color: #202124;
    
 }
@@ -472,7 +271,7 @@ html, body{
 
 
 .btnBookNow a{
-    background-color: #E3B038 ;
+    background-color: #E3B038;
     color: white;
     padding: 10px 40px;
     cursor: pointer;
@@ -496,7 +295,6 @@ html, body{
 
 .filterEvents {
     margin-top: 10px;
-    margin-left: 20px;
     
 }
 .event:nth-of-type(1){
@@ -511,7 +309,7 @@ html, body{
 
 .eventPrice{
     font-size: 23px;
-  
+    font-family: 'Poppins', sans-serif;
     color: black;
     font-weight: bold;
     padding-top: 5px;
@@ -523,17 +321,16 @@ select {
    margin-right: 20px !important;
     width: 250px !important;
     font-weight: 500 !important;
-    background: url(../img/Dropdown.png) no-repeat left #ddd;
-    background-position-x: 7%;
+    background: url(../img/Dropdown.png) no-repeat right #ddd;
+    background-position-x: 95%;
     -webkit-appearance: none;
-    font-weight: bold;
-
+    font-family: 'Poppins', sans-serif;
     -moz-appearance: none;
     text-indent: 1px;
     text-overflow: '';
 }
 select option{
-
+    
     color: black !important;
     border-radius: 15px !important;
 }
@@ -552,11 +349,7 @@ select option{
 
     .imgEvents {
         max-width: 230px;
-         margin-left: 0% !important;
- 
-    }
-    #events{
-        margin-left: 2%;
+      
     }
     .txtEvent p {
         font-size: 17px;
@@ -597,9 +390,6 @@ select option{
     .event:nth-of-type(1){
         margin-top: 10px;
     }
-    #events{
-        margin-left: 0%;
-    }
   
 }
 
@@ -610,31 +400,20 @@ select option{
         margin-bottom: 20px !important;
     }
 
-    .txtEvent h1{
-        text-align: center !important;   
-       
-    }
-
-
-
     .eventsImgs{
         text-align: center;
         margin-top: -80px;
         margin-right: 0% !important;
-       
-  
     }
 
     .imgEvents {
         max-width: 230px;
         margin-top: 85px;
-        margin-left: 0% !important;
     }
 
     .txtEvent {
-        text-align: center !important;
+        text-align: center;
         margin-top: -50px;
-    
     }
 
     .btnEvent {
@@ -716,6 +495,8 @@ select option{
     margin-top: 38px !important;
     color: white;
     font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+  
     display: block;
     align-items: center;
    
@@ -728,13 +509,13 @@ select option{
 }
 
 .pull-right a i {
-    margin-left: 15px;
+    margin-right: 15px;
     color: white;
 
 }
 
 .pull-right {
-    margin-left: 3%;
+    margin-right: 3%;
 }
 
 #footer p i {
@@ -746,7 +527,7 @@ select option{
 
 }
 .pull-left {
-    margin-right: 3%;
+    margin-left: 3%;
 }
 
 @media(max-width:458px){
@@ -754,8 +535,4 @@ select option{
         text-align: center !important;
         justify-content: center !important;
     }
- 
-}
-.footer{
-    flex-direction: row-reverse;
 }
