--- a/AR/style/reservationDetails.css
+++ b/AR/style/reservationDetails.css
@@ -1,5 +1,400 @@
+html, body{
+    background-color: #F3F3F7 !important;
+}
 
-/* Reservation : Right Content */
+
+/* Navbar */
+
+.navbar{
+    background-color: #3B3B3B;
+    padding: 15px 0px !important;
+}
+.navbar-brand{
+    margin-right: 50px !important;
+}
+.nav-link {
+    color: white;
+    font-size: 18px;
+    margin-left: 35px;
+    background: none;
+    outline: none;
+    border: none;
+}
+
+.btnModal{
+    color: white;
+    font-size: 18px;
+    margin-left: 35px;
+    background: none;
+    outline: none;
+    border: none;
+}
+
+.btnModal:hover, .btnModal:focus, .btnModal:active, .btnModal:visited, .btnModal:link{
+    background: none !important;
+    outline: none !important;
+    border: none !important;
+}
+
+.nav-link:hover, .nav-link:focus, .nav-link:active, .nav-link:visited, .nav-link:link {
+    background: none !important;
+    outline: none !important;
+    border: none !important;
+}
+
+.tooggleBtnSmall , .logoImgSmall {
+    display: none;
+}
+
+.nav-link:hover{
+    text-decoration: none;
+    color: white;
+    transform: scale(1.03);
+}
+.btnModal:hover{
+    transform: scale(1.03);
+    text-decoration: none;
+    color: white;
+}
+.navbar-nav {
+    margin-right: 40px;
+}
+
+.navbar-toggler{
+    color: white !important;
+    outline: none !important;
+    margin-left: 20px !important;
+    font-size: 25px !important;
+}
+
+@media (max-width: 520px){
+    .navbar-brand{
+        margin-right: 7px !important;
+    }
+    .navbar-toggler{
+        margin-left: 7px !important;
+    }
+    .btnModal{
+        margin-right: 10px !important;
+    }
+    .nav-link{
+        margin-right: 26px !important;
+    }
+   
+ 
+}
+
+@media (max-width: 991px){
+    .nav-link, .btnModal {
+        margin-top: 5px;
+        margin-left: 60px;
+    }
+    .navbar-nav{
+        margin-top: 15px;
+    }
+    .nav-link:hover{
+        transform: none !important;
+    }
+    .tooggleBtnSmall , .logoImgSmall {
+        display: initial;
+    }
+    .logoImgLarge, .logoImgLarge{
+        display: none;
+    }
+    .navbar-nav{
+       text-align: right !important;
+       justify-content: right !important;
+    }
+    .btnModal:hover{
+        transform: none;
+    }
+    .btnModal{
+        margin-right: 50px;
+    }
+    .nav-link{
+        margin-right: 64px;
+    }
+}
+
+/* Right Content CSS Fix */
+
+
+.reservation, .privateOffice, .events, .subscription{
+ 
+    margin-top: 50px !important;
+    margin-left: 18% !important;
+    background-color: white;
+    padding: 30px 40px;
+    box-shadow: 0 20px 20px rgba(0,0,0,.03);
+    width: 180px;
+    border-radius: 10px;
+    font-weight: bold;
+    
+}
+
+.reservation:hover, .privateOffice:hover, .events:hover, .subscription:hover {
+    transform: scale(1.06);
+    cursor: pointer;
+
+}
+
+.resDetailsContainer{
+    flex-direction: row-reverse !important;
+}
+
+
+#content p {
+    color: #707070;
+    font-weight: bold;
+}
+
+.subscription img {
+    margin-left: 12px !important;
+ 
+    justify-content: center !important;
+    margin-top: 10px;
+    margin-bottom: 12px;
+}
+
+.reservation img {
+    margin-left: 15px !important;
+    margin-top: 10px;
+    margin-bottom: 12px;
+}
+
+.privateOffice img {
+    margin-left: 16px !important;
+    margin-bottom: 12px;
+}
+.privateOffice p, .events p, .reservation p, .subscription p {
+    text-align: center !important;
+  
+}
+
+
+
+.events img {
+    margin-left: 25px !important;
+    margin-top: 10px;
+    margin-bottom: 12px;
+}
+
+
+/* Active Page CSS */
+
+.activePage {
+    background-color: #E3B038 !important;
+}
+
+.activePage img, .activePage p{
+    -webkit-filter: brightness(0) invert(1) !important;  
+    -moz-filter : brightness(0) invert(1) !important;  
+    -o-filter : brightness(0) invert(1) !important;  
+    -ms-filter : brightness(0) invert(1) !important;  
+    filter : brightness(0) invert(1) !important;  
+    font-weight: bold;
+    color: white !important;
+}
+
+@media (max-width: 1340px){
+    .reservation, .privateOffice, .events, .subscription{
+        margin-right: 12% ;
+        margin-left: 0% !important;
+    }
+
+}
+
+@media (max-width: 1588px){
+    .reservation, .privateOffice, .events, .subscription{
+
+        min-width: 165px;
+        margin-right: 12% ;
+        margin-left: 0% !important;
+
+    }
+
+}
+
+@media (max-width: 1198px){
+    .reservation, .privateOffice, .events, .subscription{
+        padding: 30px 35px;
+        margin-right: 5% !important;
+    }
+    .elements{
+        margin-right: 5% !important;
+    }
+
+}
+
+@media (max-width: 1028px){
+    .reservation, .privateOffice, .events, .subscription{
+        padding: 30px 30px;
+        margin-left: -15px !important;
+        width: 155px !important;
+    }
+    .elements{
+        margin-right: 1% !important;
+    }
+}
+
+@media(max-width: 991px){
+    .reservation, .privateOffice, .events, .subscription{
+        height: 140px !important;
+        padding: 15px 32px;
+       
+    
+    }
+    .elements{
+       justify-content: center;
+        margin-right: 0% !important;
+        margin-left: 5% !important;
+       
+    }
+
+    .elements div{
+
+         font-size: 14px !important;
+     }
+
+
+}
+
+@media(max-width:1217px){
+    .privateOffice{
+        height: 180px;
+    }
+}
+
+/* Sign In CSS */
+
+.modal-body h1{
+    font-size: 25px;
+    font-weight: 800;
+    margin-top: 30px;
+  
+}
+
+.modal-body img{
+   
+    margin-top: 20px;
+}
+
+.modal-body form{
+
+    width: 60%;
+    text-align: center;
+    justify-content: center;
+    margin: 40px auto;
+}
+
+.modal-body form input{
+    background-color: #EBEAE9;
+    height: 45px !important;
+    border-radius: 40px;
+    padding-left: 30px;
+    color: #707070 !important;
+ }
+
+ .modal-body form input:hover{
+    background-color: #EBEAE9 !important;
+ }
+
+ .form-group {
+     text-align: right !important;
+ }
+ input[type=password]{
+     margin-bottom: 10px;
+     margin-top: 20px;
+ }
+ .form-group a{
+   color: #707070;
+   font-weight: 600;
+   text-decoration: none;
+}
+
+.register{
+    color: #707070;
+    font-weight: 600;
+    text-decoration: none;
+   
+ }
+
+ .modal-content  {
+    -webkit-border-radius: 20px !important;
+    -moz-border-radius: 20px !important;
+    border-radius: 20px !important; 
+}
+
+.fa-times {
+    margin-right: 30px !important;
+    margin-top: 20px !important;
+    font-size: 30px !important;
+    color: #E3B038;
+   
+}
+
+.close {
+    outline: none !important;
+    color: #E3B038;
+}
+
+ .register:hover{
+    color: #707070;
+    text-decoration: none;
+   
+ }
+
+ .nav-item button{
+     box-shadow: none !important;
+ }
+
+.signInBtn {
+    background-color: #E3B038;
+    outline: none;
+    padding: 10px 0px;
+    border: none;
+    border-radius: 30px;
+    font-size: 18px;
+  
+    font-weight: 500;
+    margin-top: 20px;
+    margin-bottom: 20px !important;
+    
+}
+.signInBtn:hover {
+    background-color: #E3B038;
+    transform: scale(1.03);
+   
+}
+
+@media(max-width: 991px){
+
+    .modal-body form{
+        width: 80%;
+    }
+
+}
+
+@media(max-width: 400px){
+
+    .modal-body form{
+        width: 95%;
+    }
+
+}
+
+@media(max-width: 350px){
+
+    .fa-times {
+        margin-right: 10px !important;
+        font-size: 25px !important;
+        margin-top: 33px !important;
+       
+    }
+
+}
+
+/* Reservation : Left Content */
 
 
 .reservationHeader {
@@ -11,7 +406,7 @@
     
 }
 .reservationHeader p {
-    font-family: 'Poppins', sans-serif;
+   
     font-weight: 500;
     margin-top: 15px;
     font-size: 25px;
@@ -31,10 +426,10 @@
     border-radius: 15px !important;
     min-height: 40px;
     color: black !important;
-    background: url(../img/Dropdown.png) no-repeat right #ddd;
-    background-position-x: 95%;
+    background: url(../img/Dropdown.png) no-repeat left #ddd;
+    background-position-x: 7%;
     -webkit-appearance: none;
-    font-family: 'Poppins', sans-serif;
+   
     -moz-appearance: none;
     text-indent: 1px;
     font-size: 16px !important;
@@ -46,17 +441,17 @@ select option{
 }
 
  .fullDay {
-     margin-left: 67px;
+     margin-right: 67px;
      margin-top: 25px;
  }
 
 
 
  .custom-switch {
-    padding-left: 2.25rem;
+    
     padding-bottom: 1rem; 
-    margin-top: 26px;
-    margin-left: 30px;
+    margin-top: 31px;
+    margin-right: -30px;
     margin-bottom: 10px;
   
   }
@@ -86,10 +481,13 @@ select option{
 }
   
 .promoCode{
-    margin-left: -16% !important;
+  
     margin-bottom: 25px;
 }
 
+.numberOfHoursLg {
+    margin-top: 3px;
+}
 .notes {
     margin-bottom: 50px;
 }
@@ -140,7 +538,9 @@ select option{
 
  .card-body span{
     margin-right: 5px;
+    font-weight: 500;
     font-size: 18px;
+   
     color: #222831;
     text-align: center !important;
     justify-content: center !important;
@@ -154,17 +554,17 @@ select option{
     margin-top: 6px;
 }
 
+
 .numberOfHoursSm{
     display: none;
-}
-.numberOfHoursLg {
-    margin-top: 4px;
+  
 }
 
 .duration {
     margin-top: 15px;
 }
 .durationImg {
+    margin-top: -2px;
     margin-right: 2.5%;
 }
 
@@ -200,7 +600,7 @@ select option{
     width: 28% !important;
     border: none !important;
     box-shadow: 0 20px 20px rgba(0,0,0,.05);
-    font-family: 'Poppins', sans-serif;
+ 
     height: 550px;
     border-radius: 30px !important;
   
@@ -212,7 +612,7 @@ select option{
     width: 62% !important;
     border: none !important;
     box-shadow: 0 20px 20px rgba(0,0,0,.05);
-    font-family: 'Poppins', sans-serif;
+  
 
     border-radius: 30px !important;
  }
@@ -221,7 +621,7 @@ select option{
  
 
 .card-img-top{
-   height: 62%;
+   height: 58%;
     border-radius: 30px 30px 0 0;
 }
 
@@ -249,6 +649,7 @@ select option{
     outline: none;
     text-decoration: none;
     border: none !important;
+    font-weight: 500;
     background-color: #E3B038 !important;
     color: white;
     padding: 8px 30px;
@@ -257,7 +658,13 @@ select option{
     margin-top: -40px;
 
 }
+.fullDay {
+    margin-right: 88px;
+}
 
+.fullDay span{
+    margin-top: -10px !important;
+}
 .reserveBtn:hover {
     transform: scale(1.05);
 }
@@ -332,6 +739,8 @@ form{
     }
 }
 
+
+
 @media(max-width: 1160px){
     .card:nth-of-type(1){
         width: 31% !important;
@@ -339,10 +748,14 @@ form{
 }
 @media(max-width: 1220px){
     .fullDayCenter {
-        width: 80%;
-        margin: 0 auto;
-        text-align: center;
-        justify-content: center;
+        width: 80% !important;
+        margin: 0 0 !important;
+        text-align: center !important;
+        justify-content: center !important;
+    }
+
+    .custom-control{
+        margin-top: 28px;
     }
 
     .fullDay {
@@ -410,12 +823,18 @@ form{
     }
 
 }
-@media(max-width: 469px){
+@media(max-width: 492px){
     .numberOfHoursLg{
        display: none;
     }
     .numberOfHoursSm{
         display: unset;
+    
+     }
+  
+     .numberHours {
+         margin-top: 10px;
+         margin-bottom: 5px;
      }
      .range{
          width: 80%;
@@ -439,25 +858,97 @@ form{
      }
 }
 
-@media(max-width: 333px){
-   .custom-switch{
-           width: 80%;
-           margin: 10px;
-           margin-left: 40%;
-   }
 
-
-
-}
 
 @media(max-width:1220px){
-    .promoCode{
-        margin-left: 0% !important;
-       
-       
-    }
 
+    
     .card:nth-of-type(1) {
         margin-top: 80px;
      }
+}
+
+
+@media(min-width:1220px){
+    .promoCode{
+        margin-left: 7% !important;
+    }
+}
+
+
+@media(max-width:888px){
+    .promoCode{
+        margin-left: 7% !important;
+    }
+}
+
+@media(max-width:574px) {
+    .promoCode{
+        margin: 0 !important;
+    }
+}
+
+@media(max-width: 415px){
+    .fullDayCenter{
+        width: 90%;
+        margin: 20px auto;
+        justify-content: center !important;
+        text-align: center !important;
+}
+    .fullDay{
+  margin-left: 0 !important;
+  margin-right: 20% !important;
+    justify-content: center !important;
+        text-align: center !important;
+    }
+}
+
+/* footer */
+
+#footer{
+    margin-top: 38px !important;
+    color: white;
+    font-size: 16px;
+    display: block;
+    align-items: center;
+   
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+.footer p {
+    margin-top: 18px;
+}
+
+.pull-right a i {
+    margin-left: 15px;
+    color: white;
+
+}
+
+.pull-right {
+    margin-left: 3%;
+}
+
+#footer p i {
+    transition: 0.4s;
+    cursor: pointer;
+}
+#footer p i:hover {
+    transform: scale(1.3);
+
+}
+.pull-left {
+    margin-right: 3%;
+}
+
+@media(max-width:458px){
+    .footer {
+        text-align: center !important;
+        justify-content: center !important;
+    }
+   
+}
+.footer{
+    flex-direction: row-reverse !important;
 }
