--- a/EN/style/branches.css
+++ b/EN/style/branches.css
@@ -1,4 +1,3 @@
-
 /* Navbar */
 
 .navbar{
@@ -6,35 +5,16 @@
     padding: 15px 0px !important;
 }
 .navbar-brand{
-    margin-right: 50px !important;
+    margin-left: 50px !important;
 }
 .nav-link {
     color: white;
+    font-family: 'Poppins', sans-serif;
     font-size: 18px;
     margin-left: 35px;
     background: none;
     outline: none;
     border: none;
-}
-
-.branchesCards{
-   
-        flex-direction:  row-reverse;
-    
-}
-.btnModal{
-    color: white;
-    font-size: 18px;
-    margin-left: 35px;
-    background: none;
-    outline: none;
-    border: none;
-}
-
-.btnModal:hover, .btnModal:focus, .btnModal:active, .btnModal:visited, .btnModal:link{
-    background: none !important;
-    outline: none !important;
-    border: none !important;
 }
 
 .nav-link:hover, .nav-link:focus, .nav-link:active, .nav-link:visited, .nav-link:link {
@@ -43,50 +23,35 @@
     border: none !important;
 }
 
-.tooggleBtnSmall , .logoImgSmall {
-    display: none;
-}
 
 .nav-link:hover{
-    text-decoration: none;
-    color: white;
+    
     transform: scale(1.03);
-}
-.btnModal:hover{
-    transform: scale(1.03);
-    text-decoration: none;
-    color: white;
 }
 .navbar-nav {
     margin-right: 40px;
 }
-
+.nav-link:hover{
+    text-decoration: none;
+    color: white;
+}
 .navbar-toggler{
     color: white !important;
     outline: none !important;
-    margin-left: 20px !important;
+    margin-right: 20px !important;
     font-size: 25px !important;
 }
 
 @media (max-width: 520px){
     .navbar-brand{
-        margin-right: 7px !important;
+        margin-left: 17px !important;
     }
-    .navbar-toggler{
-        margin-left: 7px !important;
+    .nav-link {
+        margin-left: 20px !important;
     }
-    .btnModal{
-        margin-right: 10px !important;
-    }
-    .nav-link{
-        margin-right: 26px !important;
-    }
-   
- 
 }
-
 @media (max-width: 991px){
-    .nav-link, .btnModal {
+    .nav-link {
         margin-top: 5px;
         margin-left: 60px;
     }
@@ -96,170 +61,20 @@
     .nav-link:hover{
         transform: none !important;
     }
-    .tooggleBtnSmall , .logoImgSmall {
-        display: initial;
-    }
-    .logoImgLarge, .logoImgLarge{
-        display: none;
-    }
-    .navbar-nav{
-       text-align: right !important;
-       justify-content: right !important;
-    }
-    .btnModal:hover{
-        transform: none;
-    }
-    .btnModal{
-        margin-right: 50px;
-    }
-    .nav-link{
-        margin-right: 64px;
-    }
 }
 
-/* Sign In CSS */
-
-.modal-body h1{
-    font-size: 25px;
-    font-weight: 800;
-    margin-top: 30px;
-  
-}
-
-.modal-body img{
-   
-    margin-top: 20px;
-}
-
-.modal-body form{
-
-    width: 60%;
-    text-align: center;
-    justify-content: center;
-    margin: 40px auto;
-}
-
-.modal-body form input{
-    background-color: #EBEAE9;
-    height: 45px !important;
-    border-radius: 40px;
-    padding-left: 30px;
-    color: #707070 !important;
- }
-
- .modal-body form input:hover{
-    background-color: #EBEAE9 !important;
- }
-
- .form-group {
-     text-align: right !important;
- }
- input[type=password]{
-     margin-bottom: 10px;
-     margin-top: 20px;
- }
- .form-group a{
-   color: #707070;
-   font-weight: 600;
-   text-decoration: none;
-}
-
-.register{
-    color: #707070;
-    font-weight: 600;
-    text-decoration: none;
-   
- }
-
- .modal-content  {
-    -webkit-border-radius: 20px !important;
-    -moz-border-radius: 20px !important;
-    border-radius: 20px !important; 
-}
-
-.fa-times {
-    margin-right: 30px !important;
-    margin-top: 20px !important;
-    font-size: 30px !important;
-    color: #E3B038;
-   
-}
-
-.close {
-    outline: none !important;
-    color: #E3B038;
-}
-
- .register:hover{
-    color: #707070;
-    text-decoration: none;
-   
- }
-
- .nav-item button{
-     box-shadow: none !important;
- }
-
-.signInBtn {
-    background-color: #E3B038;
-    outline: none;
-    padding: 10px 0px;
-    border: none;
-    border-radius: 30px;
-    font-size: 18px;
-  
-    font-weight: 500;
-    margin-top: 20px;
-    margin-bottom: 20px !important;
-    
-}
-.signInBtn:hover {
-    background-color: #E3B038;
-    transform: scale(1.03);
-   
-}
-
-@media(max-width: 991px){
-
-    .modal-body form{
-        width: 80%;
-    }
-
-}
-
-@media(max-width: 400px){
-
-    .modal-body form{
-        width: 95%;
-    }
-
-}
-
-@media(max-width: 350px){
-
-    .fa-times {
-        margin-right: 10px !important;
-        font-size: 25px !important;
-        margin-top: 33px !important;
-       
-    }
-
-}
-
-
-/* Right Content CSS Fix */
+/* Left Content CSS Fix */
 
 
 .reservation, .privateOffice, .events, .subscription{
- 
+    font-family: 'Poppins', sans-serif;
     margin-top: 50px !important;
-    margin-left: 18% !important;
+    margin-left: 30%;
     background-color: white;
     padding: 30px 40px;
     box-shadow: 0 20px 20px rgba(0,0,0,.03);
     width: 180px;
     border-radius: 10px;
-    font-weight: bold;
     
 }
 
@@ -271,7 +86,6 @@
 
 #content p {
     color: #707070;
-    font-weight: bold;
 }
 
 .subscription img {
@@ -297,17 +111,13 @@
   
 }
 
-
 .events img {
     margin-left: 25px !important;
     margin-top: 10px;
     margin-bottom: 12px;
 }
 
-/* .events p {
-    margin-left: 20px !important;
- 
-} */
+
 
 /* Active Page CSS */
 
@@ -327,18 +137,15 @@
 
 @media (max-width: 1340px){
     .reservation, .privateOffice, .events, .subscription{
-        margin-right: 12% ;
-        margin-left: 0% !important;
+        margin-left: 12% !important;
     }
 
 }
 
 @media (max-width: 1588px){
     .reservation, .privateOffice, .events, .subscription{
-
+        margin-left: 20%;
         min-width: 165px;
-        margin-right: 12% ;
-        margin-left: 0% !important;
 
     }
 
@@ -347,10 +154,10 @@
 @media (max-width: 1198px){
     .reservation, .privateOffice, .events, .subscription{
         padding: 30px 35px;
-        margin-right: 5% !important;
+        margin-left: 5% !important;
     }
     .elements{
-        margin-right: 5% !important;
+        margin-left: 5% !important;
     }
 
 }
@@ -358,11 +165,10 @@
 @media (max-width: 1028px){
     .reservation, .privateOffice, .events, .subscription{
         padding: 30px 30px;
-        margin-left: -15px !important;
         width: 155px !important;
     }
     .elements{
-        margin-right: 1% !important;
+        margin-left: 1% !important;
     }
 }
 
@@ -375,8 +181,8 @@
     }
     .elements{
        justify-content: center;
-        margin-right: 0% !important;
-        margin-left: 5% !important;
+        margin-left: 0% !important;
+        margin-right: 2% !important;
        
     }
 
@@ -384,8 +190,6 @@
 
          font-size: 14px !important;
      }
-
-
 
 }
 
@@ -405,16 +209,13 @@ body{
     background: url('../img/bgBranches.jpg') no-repeat center center;
     min-height:100% !important;
     background-size: cover;
-    /* -moz-background-size: 100% 100%;          
-    -o-background-size: 100% 100%;         
--webkit-background-size: 100% 100%;            */
-       /* background-size: 100% 100%;         */
+
   
  
 }
 .branchesHeader p {
     font-size: 40px;
-   
+    font-family: 'Poppins', sans-serif;
     font-weight: 800;
     color: white !important;
     margin-top: 100px;
@@ -525,6 +326,8 @@ body{
     margin-top: 38px !important;
     color: white;
     font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+  
     display: block;
     align-items: center;
    
@@ -537,13 +340,13 @@ body{
 }
 
 .pull-right a i {
-    margin-left: 15px;
+    margin-right: 15px;
     color: white;
 
 }
 
 .pull-right {
-    margin-left: 3%;
+    margin-right: 3%;
 }
 
 #footer p i {
@@ -555,7 +358,7 @@ body{
 
 }
 .pull-left {
-    margin-right: 3%;
+    margin-left: 3%;
 }
 
 @media(max-width:458px){
@@ -563,8 +366,4 @@ body{
         text-align: center !important;
         justify-content: center !important;
     }
-
-}
-.footer{
-    flex-direction: row-reverse !important;
 }
