--- a/EN/style/privetOffice.css
+++ b/EN/style/privetOffice.css
@@ -10,30 +10,16 @@ html, body{
     padding: 15px 0px !important;
 }
 .navbar-brand{
-    margin-right: 50px !important;
+    margin-left: 50px !important;
 }
 .nav-link {
     color: white;
+    font-family: 'Poppins', sans-serif;
     font-size: 18px;
     margin-left: 35px;
     background: none;
     outline: none;
     border: none;
-}
-
-.btnModal{
-    color: white;
-    font-size: 18px;
-    margin-left: 35px;
-    background: none;
-    outline: none;
-    border: none;
-}
-
-.btnModal:hover, .btnModal:focus, .btnModal:active, .btnModal:visited, .btnModal:link{
-    background: none !important;
-    outline: none !important;
-    border: none !important;
 }
 
 .nav-link:hover, .nav-link:focus, .nav-link:active, .nav-link:visited, .nav-link:link {
@@ -42,55 +28,37 @@ html, body{
     border: none !important;
 }
 
-.tooggleBtnSmall , .logoImgSmall {
-    display: none;
-}
 
 .nav-link:hover{
-    text-decoration: none;
-    color: white;
+    
     transform: scale(1.03);
-}
-.btnModal:hover{
-    transform: scale(1.03);
-    text-decoration: none;
-    color: white;
 }
 .navbar-nav {
     margin-right: 40px;
 }
-
+.nav-link:hover{
+    text-decoration: none;
+    color: white;
+}
 .navbar-toggler{
     color: white !important;
     outline: none !important;
-    margin-left: 20px !important;
+    margin-right: 20px !important;
     font-size: 25px !important;
 }
 
 @media (max-width: 520px){
     .navbar-brand{
-        margin-right: 7px !important;
+        margin-left: 17px !important;
     }
-    .navbar-toggler{
-        margin-left: 7px !important;
+    .nav-link {
+        margin-left: 20px !important;
     }
-    .btnModal{
-        margin-right: 10px !important;
-    }
-    .nav-link{
-        margin-right: 26px !important;
-    }
-   
- 
 }
-
 @media (max-width: 991px){
-    .nav-link, .btnModal {
+    .nav-link {
         margin-top: 5px;
         margin-left: 60px;
-    }
-    .elements{
-        flex-direction: row-reverse;
     }
     .navbar-nav{
         margin-top: 15px;
@@ -98,46 +66,23 @@ html, body{
     .nav-link:hover{
         transform: none !important;
     }
-    .tooggleBtnSmall , .logoImgSmall {
-        display: initial;
-    }
-    .logoImgLarge, .logoImgLarge{
-        display: none;
-    }
-    .navbar-nav{
-       text-align: right !important;
-       justify-content: right !important;
-    }
-    .btnModal:hover{
-        transform: none;
-    }
-    .btnModal{
-        margin-right: 50px;
-    }
-    .nav-link{
-        margin-right: 64px;
-    }
 }
 
-/* Right Content CSS Fix */
+/* Left Content CSS Fix */
 
 
 .reservation, .privateOffice, .events, .subscription{
- 
+    font-family: 'Poppins', sans-serif;
     margin-top: 50px !important;
-    margin-left: 18% !important;
+    margin-left: 30%;
     background-color: white;
     padding: 30px 40px;
     box-shadow: 0 20px 20px rgba(0,0,0,.03);
     width: 180px;
     border-radius: 10px;
-    font-weight: bold;
     
 }
 
-.privet, .priverContainer, .date {
-    flex-direction: row-reverse !important;
-}
 .reservation:hover, .privateOffice:hover, .events:hover, .subscription:hover {
     transform: scale(1.06);
     cursor: pointer;
@@ -146,7 +91,6 @@ html, body{
 
 #content p {
     color: #707070;
-    font-weight: bold;
 }
 
 .subscription img {
@@ -171,7 +115,6 @@ html, body{
     text-align: center !important;
   
 }
-
 
 .events img {
     margin-left: 25px !important;
@@ -202,18 +145,15 @@ html, body{
 
 @media (max-width: 1340px){
     .reservation, .privateOffice, .events, .subscription{
-        margin-right: 12% ;
-        margin-left: 0% !important;
+        margin-left: 12% !important;
     }
 
 }
 
 @media (max-width: 1588px){
     .reservation, .privateOffice, .events, .subscription{
-
+        margin-left: 20%;
         min-width: 165px;
-        margin-right: 12% ;
-        margin-left: 0% !important;
 
     }
 
@@ -222,10 +162,10 @@ html, body{
 @media (max-width: 1198px){
     .reservation, .privateOffice, .events, .subscription{
         padding: 30px 35px;
-        margin-right: 5% !important;
+        margin-left: 5% !important;
     }
     .elements{
-        margin-right: 5% !important;
+        margin-left: 5% !important;
     }
 
 }
@@ -233,11 +173,10 @@ html, body{
 @media (max-width: 1028px){
     .reservation, .privateOffice, .events, .subscription{
         padding: 30px 30px;
-        margin-left: -15px !important;
         width: 155px !important;
     }
     .elements{
-        margin-right: 1% !important;
+        margin-left: 1% !important;
     }
 }
 
@@ -250,8 +189,8 @@ html, body{
     }
     .elements{
        justify-content: center;
-        margin-right: 0% !important;
-        margin-left: 5% !important;
+        margin-left: 0% !important;
+        margin-right: 2% !important;
        
     }
 
@@ -259,7 +198,6 @@ html, body{
 
          font-size: 14px !important;
      }
-
 
 }
 
@@ -269,136 +207,7 @@ html, body{
     }
 }
 
-/* Sign In CSS */
-
-.modal-body h1{
-    font-size: 25px;
-    font-weight: 800;
-    margin-top: 30px;
-  
-}
-
-.modal-body img{
-   
-    margin-top: 20px;
-}
-
-.modal-body form{
-
-    width: 60%;
-    text-align: center;
-    justify-content: center;
-    margin: 40px auto;
-}
-
-.modal-body form input{
-    background-color: #EBEAE9;
-    height: 45px !important;
-    border-radius: 40px;
-    padding-left: 30px;
-    color: #707070 !important;
- }
-
- .modal-body form input:hover{
-    background-color: #EBEAE9 !important;
- }
-
- .form-group {
-     text-align: right !important;
- }
- input[type=password]{
-     margin-bottom: 10px;
-     margin-top: 20px;
- }
- .form-group a{
-   color: #707070;
-   font-weight: 600;
-   text-decoration: none;
-}
-
-.register{
-    color: #707070;
-    font-weight: 600;
-    text-decoration: none;
-   
- }
-
- .modal-content  {
-    -webkit-border-radius: 20px !important;
-    -moz-border-radius: 20px !important;
-    border-radius: 20px !important; 
-}
-
-.fa-times {
-    margin-right: 30px !important;
-    margin-top: 20px !important;
-    font-size: 30px !important;
-    color: #E3B038;
-   
-}
-
-.close {
-    outline: none !important;
-    color: #E3B038;
-}
-
- .register:hover{
-    color: #707070;
-    text-decoration: none;
-   
- }
-
- .nav-item button{
-     box-shadow: none !important;
- }
-
-.signInBtn {
-    background-color: #E3B038;
-    outline: none;
-    padding: 10px 0px;
-    border: none;
-    border-radius: 30px;
-    font-size: 18px;
-  
-    font-weight: 500;
-    margin-top: 20px;
-    margin-bottom: 20px !important;
-    
-}
-.signInBtn:hover {
-    background-color: #E3B038;
-    transform: scale(1.03);
-   
-}
-
-@media(max-width: 991px){
-
-    .modal-body form{
-        width: 80%;
-    }
-
-}
-
-@media(max-width: 400px){
-
-    .modal-body form{
-        width: 95%;
-    }
-
-}
-
-@media(max-width: 350px){
-
-    .fa-times {
-        margin-right: 10px !important;
-        font-size: 25px !important;
-        margin-top: 33px !important;
-       
-    }
-
-}
-
-/* Privet Office : Left Content */
+/* Privet Office : Right Content */
 
  
 .rightContent{
@@ -409,9 +218,9 @@ html, body{
 }
 
 .imgPrivetOffice {
-    max-width: 340px;
+    max-width: 370px;
     border-radius: 30px;
-    margin-top: 100px !important;
+    margin-top: 80px !important;
 }
 
 .txtPrivetOffice {
@@ -419,21 +228,19 @@ html, body{
     
 }
 .txtPrivetOffice h1{
-    text-align: right ;
+    font-family: 'Poppins', sans-serif;
     color: #202124;
     font-size: 32px;
-    margin-top: 20px !important;
 }
  .txtPrivetOffice p, .txtPrivetOffice a {
-
+    font-family:  'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 500;
 
 }
 
 .txtPrivetOffice p {
     color: #A6ADB4;
-    font-size: 18px;
-    text-align: right ;
+    font-size: 19px;
 }
 
 .txtPrivetOffice h1,  .txtPrivetOffice a {
@@ -444,7 +251,6 @@ html, body{
 .btnRent a{
     background-color: #E3B038;
     color: white;
-   
     padding: 10px 45px;
     cursor: pointer;
     border-radius: 20px;
@@ -454,17 +260,14 @@ html, body{
     box-shadow: 0px 20px 31px -13px rgba(255,200,61,0.44);
 }
 
-
 .btnRent {
     margin-top: 7px !important;
-    text-align: left ;
 }
 
 .btnPrivetOffice {
     text-align: right;
    
 }
-
 .btnRent a:hover {
     color: white;
     text-decoration: none !important;
@@ -476,41 +279,32 @@ html, body{
 
 
 
-
 .date {
     margin-top: 20px;
     margin-bottom: -20px;
 }
 
 .dateTxt {
-    margin-left: 10px;
+    margin-right: 10px;
     padding-top: 5px;
     font-weight: 500;
 }
 
 @media(max-width: 1580px){
     .imgPrivetOffice {
-        max-width: 300px;
-        margin-top: 100px !important;
-    }
-    .blog .carousel-indicators {
-   
-        margin-bottom: -100px !important;
-    
+        max-width: 320px;
+        margin-top: 90px !important;
     }
 }
 
-@media(max-width: 1424px){
+@media(max-width: 1300px){
 
     .imgPrivetOffice {
-        max-width: 270px;
-        margin-top: 110px !important;
+        max-width: 290px;
+        margin-top: 90px !important;
     }
     .txtPrivetOffice p {
         font-size: 17px;
-    }
-    .txtPrivetOffice h1{
-        margin-top: 20px !important;
     }
     .btnRent a{
         padding: 8px 35px;
@@ -518,16 +312,16 @@ html, body{
     }
 }
 
-@media(max-width: 1220px){
+@media(max-width: 1170px){
 
-   
-
-    .imgPrivetOffice {
-        max-width: 230px;
-        margin-top: 110px !important;
-
+    .imgOffice{
+        margin-right: 5% !important;
     }
 
+    .imgPrivetOffice {
+        max-width: 250px;
+        margin-top: 110px !important;
+    }
 
     .privet:nth-of-type(2) {
         margin-top: -20px;
@@ -536,20 +330,11 @@ html, body{
 
 }
 
-@media(max-width: 1200px){
-
-    .txtPrivetOffice h1{
-        margin-top: 0px !important;
-    }
-}
 
 @media(max-width: 1060px){
 
     .blog .carousel-indicators {
-   
-        bottom: -55px;
-        margin-bottom: 0px !important;
-    
+        bottom: -15px !important;
     }
 }
 
@@ -562,8 +347,7 @@ html, body{
     }
 
     .imgPrivetOffice {
-        max-width: 300px;
-        
+        max-width: 350px;
     }
 
     .txtPrivetOffice {
@@ -581,18 +365,8 @@ html, body{
     }
 
     .date {
-        margin-left: 35px;
+        
         margin-bottom: 0px;
-    }
-  
-  
-    .txtPrivetOffice h1, .txtPrivetOffice p, .btnRent{
-        text-align: center !important;
-    }
-    .blog .carousel-indicators {
-
-        bottom: -28px !important;
-        margin-bottom: 20px !important;
     }
 
 }
@@ -603,10 +377,6 @@ html, body{
     .imgPrivetOffice {
         max-width: 250px;
     }
-    .date {
-        margin-left: 10px !important;
-       
-    }
 }
 
 @media(max-width: 767px){
@@ -616,8 +386,10 @@ html, body{
         margin-left: 28%;
     
     }
-   
-
+    .toDate {
+        padding-left: 20px !important;
+        
+    }
    
 }
 
@@ -640,7 +412,7 @@ html, body{
 .blog .carousel-indicators {
    
     bottom: -55px;
-    margin-bottom: 40px !important;
+    margin-bottom: 30px !important;
 
 }
 
@@ -679,13 +451,14 @@ html, body{
     background: #E3B038;
 }   
 
-
 /* footer */
 
 #footer{
     margin-top: 38px !important;
     color: white;
     font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+  
     display: block;
     align-items: center;
    
@@ -698,13 +471,13 @@ html, body{
 }
 
 .pull-right a i {
-    margin-left: 15px;
+    margin-right: 15px;
     color: white;
 
 }
 
 .pull-right {
-    margin-left: 3%;
+    margin-right: 3%;
 }
 
 #footer p i {
@@ -716,7 +489,7 @@ html, body{
 
 }
 .pull-left {
-    margin-right: 3%;
+    margin-left: 3%;
 }
 
 @media(max-width:458px){
@@ -724,8 +497,4 @@ html, body{
         text-align: center !important;
         justify-content: center !important;
     }
-  
-}
-.footer{
-    flex-direction: row-reverse;
 }
