--- a/EN/style/profile.css
+++ b/EN/style/profile.css
@@ -1,3 +1,101 @@
+html, body{
+    background-color: #F3F3F7 !important;
+}
+
+/* Navbar */
+
+.navbar{
+    background-color: #3B3B3B;
+    padding: 15px 0px !important;
+}
+.navbar-brand{
+    margin-left: 50px !important;
+}
+.nav-link {
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    margin-left: 35px;
+    background: none;
+    outline: none;
+    border: none;
+}
+
+.nav-link:hover, .nav-link:focus, .nav-link:active, .nav-link:visited, .nav-link:link {
+    background: none !important;
+    outline: none !important;
+    border: none !important;
+}
+
+
+.nav-link:hover{
+    
+    transform: scale(1.03);
+}
+.navbar-nav {
+    margin-right: 40px;
+}
+.nav-link:hover{
+    text-decoration: none;
+    color: white;
+}
+.navbar-toggler{
+    color: white !important;
+    outline: none !important;
+    margin-right: 20px !important;
+    font-size: 25px !important;
+}
+
+
+
+@media (max-width: 520px){
+    .navbar-brand{
+        margin-left: 17px !important;
+    }
+    .nav-link {
+        margin-left: 20px !important;
+    }
+}
+@media (max-width: 991px){
+    .nav-link {
+        margin-top: 5px;
+        margin-left: 60px;
+    }
+    .navbar-nav{
+        margin-top: 15px;
+    }
+    .nav-link:hover{
+        transform: none !important;
+    }
+}
+
+
+/* CSS ADD FOR SIGN IN LINKS */
+
+.minSize {
+    display: none;
+}
+
+.fa-user, .fa-sign-out-alt {
+    padding-right: 10px !important;
+    color: #E3B038;
+}
+
+.dropdown-item {
+    font-weight: 500;
+}
+
+@media (max-width: 991px){
+   
+    .minSize {
+        display: unset;
+    }
+    .dropdown {
+        display: none;
+    }
+
+}
+
 /* Profile Informations */
 
 
@@ -271,3 +369,50 @@ td{
     }
 }
 
+/* footer */
+
+#footer{
+    margin-top: 38px !important;
+    color: white;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+  
+    display: block;
+    align-items: center;
+   
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+.footer p {
+    margin-top: 18px;
+}
+
+.pull-right a i {
+    margin-right: 15px;
+    color: white;
+
+}
+
+.pull-right {
+    margin-right: 3%;
+}
+
+#footer p i {
+    transition: 0.4s;
+    cursor: pointer;
+}
+#footer p i:hover {
+    transform: scale(1.3);
+
+}
+.pull-left {
+    margin-left: 3%;
+}
+
+@media(max-width:458px){
+    .footer {
+        text-align: center !important;
+        justify-content: center !important;
+    }
+}
