--- a/EN/style/subscription.css
+++ b/EN/style/subscription.css
@@ -10,30 +10,16 @@ html, body{
     padding: 15px 0px !important;
 }
 .navbar-brand{
-    margin-right: 50px !important;
+    margin-left: 50px !important;
 }
 .nav-link {
     color: white;
+    font-family: 'Poppins', sans-serif;
     font-size: 18px;
     margin-left: 35px;
     background: none;
     outline: none;
     border: none;
-}
-
-.btnModal{
-    color: white;
-    font-size: 18px;
-    margin-left: 35px;
-    background: none;
-    outline: none;
-    border: none;
-}
-
-.btnModal:hover, .btnModal:focus, .btnModal:active, .btnModal:visited, .btnModal:link{
-    background: none !important;
-    outline: none !important;
-    border: none !important;
 }
 
 .nav-link:hover, .nav-link:focus, .nav-link:active, .nav-link:visited, .nav-link:link {
@@ -42,50 +28,35 @@ html, body{
     border: none !important;
 }
 
-.tooggleBtnSmall , .logoImgSmall {
-    display: none;
-}
 
 .nav-link:hover{
-    text-decoration: none;
-    color: white;
+    
     transform: scale(1.03);
-}
-.btnModal:hover{
-    transform: scale(1.03);
-    text-decoration: none;
-    color: white;
 }
 .navbar-nav {
     margin-right: 40px;
 }
-
+.nav-link:hover{
+    text-decoration: none;
+    color: white;
+}
 .navbar-toggler{
     color: white !important;
     outline: none !important;
-    margin-left: 20px !important;
+    margin-right: 20px !important;
     font-size: 25px !important;
 }
 
 @media (max-width: 520px){
     .navbar-brand{
-        margin-right: 7px !important;
+        margin-left: 17px !important;
     }
-    .navbar-toggler{
-        margin-left: 7px !important;
+    .nav-link {
+        margin-left: 20px !important;
     }
-    .btnModal{
-        margin-right: 10px !important;
-    }
-    .nav-link{
-        margin-right: 26px !important;
-    }
-   
- 
 }
-
 @media (max-width: 991px){
-    .nav-link, .btnModal {
+    .nav-link {
         margin-top: 5px;
         margin-left: 60px;
     }
@@ -95,49 +66,23 @@ html, body{
     .nav-link:hover{
         transform: none !important;
     }
-    .elements{
-        flex-direction: row-reverse !important;
-    }
-    .tooggleBtnSmall , .logoImgSmall {
-        display: initial;
-    }
-    .logoImgLarge, .logoImgLarge{
-        display: none;
-    }
-    .navbar-nav{
-       text-align: right !important;
-       justify-content: right !important;
-    }
-    .btnModal:hover{
-        transform: none;
-    }
-    .btnModal{
-        margin-right: 50px;
-    }
-    .nav-link{
-        margin-right: 64px;
-    }
 }
 
-
-/* Right Content CSS Fix */
+/* Left Content CSS Fix */
 
 
 .reservation, .privateOffice, .events, .subscription{
- 
+    font-family: 'Poppins', sans-serif;
     margin-top: 50px !important;
-    margin-left: 18% !important;
+    margin-left: 30%;
     background-color: white;
     padding: 30px 40px;
     box-shadow: 0 20px 20px rgba(0,0,0,.03);
     width: 180px;
     border-radius: 10px;
-    font-weight: bold;
     
 }
-.subscriptionCards, .filterSubscription, .subscriptionContainer {
-    flex-direction: row-reverse !important;
-}
+
 .reservation:hover, .privateOffice:hover, .events:hover, .subscription:hover {
     transform: scale(1.06);
     cursor: pointer;
@@ -146,7 +91,6 @@ html, body{
 
 #content p {
     color: #707070;
-    font-weight: bold;
 }
 
 .subscription img {
@@ -172,15 +116,16 @@ html, body{
   
 }
 
-
-
 .events img {
     margin-left: 25px !important;
     margin-top: 10px;
     margin-bottom: 12px;
 }
 
-
+/* .events p {
+    margin-left: 20px !important;
+ 
+} */
 
 /* Active Page CSS */
 
@@ -200,18 +145,15 @@ html, body{
 
 @media (max-width: 1340px){
     .reservation, .privateOffice, .events, .subscription{
-        margin-right: 12% ;
-        margin-left: 0% !important;
+        margin-left: 12% !important;
     }
 
 }
 
 @media (max-width: 1588px){
     .reservation, .privateOffice, .events, .subscription{
-
+        margin-left: 20%;
         min-width: 165px;
-        margin-right: 12% ;
-        margin-left: 0% !important;
 
     }
 
@@ -220,10 +162,10 @@ html, body{
 @media (max-width: 1198px){
     .reservation, .privateOffice, .events, .subscription{
         padding: 30px 35px;
-        margin-right: 5% !important;
+        margin-left: 5% !important;
     }
     .elements{
-        margin-right: 5% !important;
+        margin-left: 5% !important;
     }
 
 }
@@ -231,11 +173,10 @@ html, body{
 @media (max-width: 1028px){
     .reservation, .privateOffice, .events, .subscription{
         padding: 30px 30px;
-        margin-left: -15px !important;
         width: 155px !important;
     }
     .elements{
-        margin-right: 1% !important;
+        margin-left: 1% !important;
     }
 }
 
@@ -248,8 +189,8 @@ html, body{
     }
     .elements{
        justify-content: center;
-        margin-right: 0% !important;
-        margin-left: 5% !important;
+        margin-left: 0% !important;
+        margin-right: 2% !important;
        
     }
 
@@ -257,8 +198,6 @@ html, body{
 
          font-size: 14px !important;
      }
-
-
 
 }
 
@@ -268,136 +207,7 @@ html, body{
     }
 }
 
-/* Sign In CSS */
-
-.modal-body h1{
-    font-size: 25px;
-    font-weight: 800;
-    margin-top: 30px;
-  
-}
-
-.modal-body img{
-   
-    margin-top: 20px;
-}
-
-.modal-body form{
-
-    width: 60%;
-    text-align: center;
-    justify-content: center;
-    margin: 40px auto;
-}
-
-.modal-body form input{
-    background-color: #EBEAE9;
-    height: 45px !important;
-    border-radius: 40px;
-    padding-left: 30px;
-    color: #707070 !important;
- }
-
- .modal-body form input:hover{
-    background-color: #EBEAE9 !important;
- }
-
- .form-group {
-     text-align: right !important;
- }
- input[type=password]{
-     margin-bottom: 10px;
-     margin-top: 20px;
- }
- .form-group a{
-   color: #707070;
-   font-weight: 600;
-   text-decoration: none;
-}
-
-.register{
-    color: #707070;
-    font-weight: 600;
-    text-decoration: none;
-   
- }
-
- .modal-content  {
-    -webkit-border-radius: 20px !important;
-    -moz-border-radius: 20px !important;
-    border-radius: 20px !important; 
-}
-
-.fa-times {
-    margin-right: 30px !important;
-    margin-top: 20px !important;
-    font-size: 30px !important;
-    color: #E3B038;
-   
-}
-
-.close {
-    outline: none !important;
-    color: #E3B038;
-}
-
- .register:hover{
-    color: #707070;
-    text-decoration: none;
-   
- }
-
- .nav-item button{
-     box-shadow: none !important;
- }
-
-.signInBtn {
-    background-color: #E3B038;
-    outline: none;
-    padding: 10px 0px;
-    border: none;
-    border-radius: 30px;
-    font-size: 18px;
-  
-    font-weight: 500;
-    margin-top: 20px;
-    margin-bottom: 20px !important;
-    
-}
-.signInBtn:hover {
-    background-color: #E3B038;
-    transform: scale(1.03);
-   
-}
-
-@media(max-width: 991px){
-
-    .modal-body form{
-        width: 80%;
-    }
-
-}
-
-@media(max-width: 400px){
-
-    .modal-body form{
-        width: 95%;
-    }
-
-}
-
-@media(max-width: 350px){
-
-    .fa-times {
-        margin-right: 10px !important;
-        font-size: 25px !important;
-        margin-top: 33px !important;
-       
-    }
-
-}
-
-/* Subscription : Left Content */
+/* Subscription : Right Content */
 
 select {
     border-radius: 15px !important;
@@ -405,10 +215,10 @@ select {
     color: #E3B038 !important;
     width: 250px !important;
     font-weight: 500 !important;
-    background: url(../img/Dropdown.png) no-repeat left #ddd;
-    background-position-x: 7%;
+    background: url(../img/Dropdown.png) no-repeat right #ddd;
+    background-position-x: 95%;
     -webkit-appearance: none;
-  font-weight: bold;
+    font-family: 'Poppins', sans-serif;
     -moz-appearance: none;
     text-indent: 1px;
     text-overflow: '';
@@ -427,10 +237,10 @@ select option{
     
 }
 .filterSubscription p {
-   font-size: 18px;
+    font-family: 'Poppins', sans-serif;
     font-weight: 500;
-    margin-top: 10px;
-    margin-left: 40px;
+    margin-top: 15px;
+    margin-right: 40px;
     color: black !important;
 }
 
@@ -440,7 +250,7 @@ select option{
     width: 31% !important;
     border: none !important;
     box-shadow: 0 20px 20px rgba(0,0,0,.05);
-   
+    font-family: 'Poppins', sans-serif;
     border-radius: 28px !important;
  }
  .card-body{
@@ -467,7 +277,6 @@ select option{
   
  }
 
-
  .card-body p:nth-child(3) {
      margin-top: -18px;
      margin-bottom: 25px;
@@ -478,7 +287,7 @@ select option{
    font-weight: 600;
    margin-top: 30px;
    color: black !important;
-
+   font-family: 'Poppins', sans-serif;
    
 }
 
@@ -492,7 +301,6 @@ select option{
     border: none;
     background-color: #E3B038 ;
     color: white;
-    font-weight: bold;
     padding: 10px 25px;
     border-radius: 30px;
     font-size: 15px;
@@ -518,11 +326,10 @@ select option{
 @media(max-width: 445px){
 
     .filterSubscription p {
-        margin-top: 10px;
+        margin-top: 0px;
     }
 
 }
-
 
 
 @media(max-width: 1100px){
@@ -585,13 +392,14 @@ select option{
      }
 }   
 
-
 /* footer */
 
 #footer{
     margin-top: 38px !important;
     color: white;
     font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+  
     display: block;
     align-items: center;
    
@@ -604,13 +412,13 @@ select option{
 }
 
 .pull-right a i {
-    margin-left: 15px;
+    margin-right: 15px;
     color: white;
 
 }
 
 .pull-right {
-    margin-left: 3%;
+    margin-right: 3%;
 }
 
 #footer p i {
@@ -622,7 +430,7 @@ select option{
 
 }
 .pull-left {
-    margin-right: 3%;
+    margin-left: 3%;
 }
 
 @media(max-width:458px){
@@ -630,8 +438,4 @@ select option{
         text-align: center !important;
         justify-content: center !important;
     }
- 
-}
-.footer{
-    flex-direction: row-reverse !important;
 }
